--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ opacity: 0.5;
         <h1 id="supervisor">supervisor</h1>
         <p4 ID="suptext">Monitors activity to identify project roadblocks</p4>
         <img
-          src="../images/icon-supervisor.svg" 
+          src="./images/icon-supervisor.svg" 
         />
       </div>
       <div class="box2">
@@ -320,7 +320,7 @@ opacity: 0.5;
         <h1 id="TeamBuilder">Team Builder</h1>
         <p4 ID="teamtext">Scans our talent network to create the optimal team for your project</p4>
         <img
-          src="../images/icon-team-builder.svg"
+          src="./images/icon-team-builder.svg"
         />
 
       </red></div>
@@ -329,7 +329,7 @@ opacity: 0.5;
       <h1 id="Karma">Karma</h1>
       <p4 ID="karmatext">Regularly evaluates our talent to ensure quality</p4>
       <img
-        src="../images/icon-karma.svg"
+        src="./images/icon-karma.svg"
       />
       
 </div>
@@ -339,7 +339,7 @@ opacity: 0.5;
       <h1 id="Calculatore">Calculator</h1>
       <p4 ID="calctext">Uses data from past projects to provide better delivery estimates</p4>
       <img
-        src="../images/icon-calculator.svg"
+        src="./images/icon-calculator.svg"
       />
     </div>
   </body>
